--- a/cuenta.html
+++ b/cuenta.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Cuenta - GreenHaul</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/cuenta.css">
-</head>
+    <link rel="stylesheet" href="assets/css/styles.css"> <link rel="stylesheet" href="assets/css/cuenta.css"> </head>
 <body>
     <header>
         <nav class="navbar">
@@ -21,10 +19,9 @@
                     <li><a href="servicios.html" class="nav-link">Servicios</a></li>
                     <li><a href="nosotros.html" class="nav-link">Nosotros</a></li>
                     <li><a href="contacto.html" class="nav-link">Contacto</a></li>
-                    <li><a href="faq.html" class="nav-link">Preguntas</a></li>
                 </ul>
                 <div class="navbar-right-items">
-                    <div class="navbar-user-actions">
+                    <div class="navbar-user-actions" id="navbarUserActions">
                         <a href="login.html" class="btn btn-outline" id="loginBtn" style="display: none;">Iniciar Sesión</a>
                         <a href="cuenta.html" class="nav-link active" id="accountLink" style="display: flex;">Hola, <span id="userName"></span></a>
                         <button class="btn-tertiary" id="logoutBtn" title="Cerrar Sesión">
@@ -53,36 +50,9 @@
                         <div id="dashboard-section" class="account-section active">
                             <h3>Resumen de Actividad</h3>
                             <div class="dashboard-grid">
-                                <div class="dashboard-card">
-                                    <div class="card-header"><h4>Alquiler Actual</h4><i class="fas fa-calendar-alt icon"></i></div>
-                                    <div class="card-body">
-                                        <ul class="stats">
-                                            <li>Utilizado: <span id="daysUsed">--</span></li>
-                                            <li>Disponible: <span id="daysLeft">--</span></li>
-                                        </ul>
-                                        <div class="card-chart"><div class="progress-donut" id="rentalProgress">--%</div></div>
-                                    </div>
-                                </div>
-                                <div class="dashboard-card">
-                                    <div class="card-header"><h4>Cajas en Uso</h4><i class="fas fa-boxes-stacked icon"></i></div>
-                                    <div class="card-body">
-                                        <ul class="stats">
-                                            <li>Medianas: <span id="mediumBoxes">--</span></li>
-                                            <li>Grandes: <span id="largeBoxes">--</span></li>
-                                        </ul>
-                                        <div class="card-chart"><div class="progress-donut" id="boxProgress">--%</div></div>
-                                    </div>
-                                </div>
-                                <div class="dashboard-card">
-                                    <div class="card-header"><h4>Impacto Ecológico</h4><i class="fas fa-leaf icon"></i></div>
-                                    <div class="card-body">
-                                        <ul class="stats">
-                                            <li>Cartón Ahorrado: <span id="cardboardSaved">--</span> kg</li>
-                                            <li>Nivel Eco: <span id="ecoLevel">--</span></li>
-                                        </ul>
-                                        <div class="card-chart"><div class="progress-donut" id="ecoProgress">--%</div></div>
-                                    </div>
-                                </div>
+                                <div class="dashboard-card"><div class="card-header"><h4>Alquiler Actual</h4><i class="fas fa-calendar-alt icon"></i></div><div class="card-body"><ul class="stats"><li>Utilizado: <span id="daysUsed">--</span></li><li>Disponible: <span id="daysLeft">--</span></li></ul><div class="card-chart"><div class="progress-donut" id="rentalProgress">--%</div></div></div></div>
+                                <div class="dashboard-card"><div class="card-header"><h4>Cajas en Uso</h4><i class="fas fa-boxes-stacked icon"></i></div><div class="card-body"><ul class="stats"><li>Medianas: <span id="mediumBoxes">--</span></li><li>Grandes: <span id="largeBoxes">--</span></li></ul><div class="card-chart"><div class="progress-donut" id="boxProgress">--%</div></div></div></div>
+                                <div class="dashboard-card"><div class="card-header"><h4>Impacto Ecológico</h4><i class="fas fa-leaf icon"></i></div><div class="card-body"><ul class="stats"><li>Cartón Ahorrado: <span id="cardboardSaved">--</span> kg</li><li>Nivel Eco: <span id="ecoLevel">--</span></li></ul><div class="card-chart"><div class="progress-donut" id="ecoProgress">--%</div></div></div></div>
                             </div>
                         </div>
                         <div id="pedidos-section" class="account-section">
@@ -93,14 +63,11 @@
                             <h3>Configuración de Perfil</h3>
                             <form id="profileForm">
                                 <div class="form-grid">
-                                    <div class="form-group"><label for="profile-name">Nombre</label><input type="text" id="profile-name"></div>
-                                    <div class="form-group"><label for="profile-lastname">Apellido</label><input type="text" id="profile-lastname"></div>
+                                    <div class="form-group"><label for="profile-name">Nombre(s)</label><input type="text" id="profile-name"></div>
+                                    <div class="form-group"><label for="profile-lastname">Apellidos</label><input type="text" id="profile-lastname"></div>
                                 </div>
-                                <div class="form-group"><label for="profile-email">Correo Electrónico</label><input type="email" id="profile-email"></div>
-                                <div class="form-group">
-                                    <label for="profile-whatsapp">Número de WhatsApp</label>
-                                    <input type="tel" id="profile-whatsapp">
-                                </div>
+                                <div class="form-group"><label for="profile-email">Correo Electrónico</label><input type="email" id="profile-email" disabled></div>
+                                <div class="form-group"><label for="profile-whatsapp">Número de WhatsApp</label><input type="tel" id="profile-whatsapp"></div>
                                 <hr style="border:0; border-top:1px solid #eee; margin:30px 0;">
                                 <button type="submit" class="btn btn-primary">Guardar Cambios</button>
                             </form>
@@ -116,20 +83,18 @@
         </section>
     </main>
 
+    <footer class="footer">
+        </footer>
+
     <div id="notificationPopup"></div>
 
+    <script type="module" src="/assets/js/main.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // --- DATOS INICIALES Y CARGA DESDE LOCALSTORAGE ---
             let userData = {
-                name: 'Hector Alejandro Fuentes Zarate', lastname: '', email: 'hector.alejandrofz@gmail.com', whatsapp: '',
-                orders: [
-                    { id: '#ECO-2025-003', date: '01 Julio, 2025', total: '$850.00', status: 'Activo' },
-                    { id: '#ECO-2024-002', date: '15 Marzo, 2024', total: '$1,500.00', status: 'Completado' },
-                ],
-                addresses: [
-                    { street: 'Av. de los Insurgentes Sur 3579, Tlalpan, CDMX', tag: 'Principal' },
-                ],
+                name: 'Usuario', lastname: '', email: '', whatsapp: '',
+                orders: [{ id: '#ECO-2025-003', date: '01 Julio, 2025', total: '$850.00', status: 'Activo' }],
+                addresses: [{ street: 'Av. Insurgentes Sur 3579, CDMX', tag: 'Principal' }],
                 rental: { startDate: '2025-07-01', endDate: '2025-07-31', mediumBoxes: 40, largeBoxes: 15, totalPlanBoxes: 100 },
                 ecoImpact: { cardboardSavedKg: 195, tripsSaved: 4, ecoLevel: 'Héroe', ecoProgress: 85 }
             };
@@ -141,7 +106,6 @@
             }
             userData = { ...userData, ...savedUser };
 
-            // --- SELECTORES DE ELEMENTOS ---
             const userNameSpan = document.getElementById('userName');
             const accountTitle = document.getElementById('account-title');
             const profileNameInput = document.getElementById('profile-name');
@@ -149,23 +113,27 @@
             const profileEmailInput = document.getElementById('profile-email');
             const profileWhatsappInput = document.getElementById('profile-whatsapp');
             
-            // --- FUNCIÓN PARA POBLAR TODA LA INTERFAZ ---
             function populateUI() {
-                userNameSpan.textContent = userData.name.split(' ')[0];
+                // Lógica para el Header
+                userNameSpan.textContent = userData.name.split(' ')[0]; // Muestra solo el primer nombre en el header
                 accountTitle.textContent = `Panel de Control de ${userData.name}`;
                 
+                // Lógica para separar nombre y apellidos en el formulario
                 const nameParts = userData.name.split(' ');
-                profileNameInput.value = nameParts.slice(0, 2).join(' ');
-                profileLastnameInput.value = nameParts.slice(2).join(' ');
+                const firstName = nameParts.slice(0, 2).join(' ');
+                const lastName = nameParts.slice(2).join(' ');
+
+                profileNameInput.value = firstName;
+                profileLastnameInput.value = lastName;
                 profileEmailInput.value = userData.email;
                 profileWhatsappInput.value = userData.whatsapp || '';
 
+                // Lógica para Pedidos y Direcciones (con datos de ejemplo)
                 const orderContainer = document.getElementById('order-history-container');
                 orderContainer.innerHTML = '';
                 userData.orders.forEach(order => {
                     orderContainer.innerHTML += `<div class="order-item"><span>${order.id}</span><span>${order.date}</span><span>${order.total}</span><span class="order-item-status status-${order.status.toLowerCase()}">${order.status}</span></div>`;
                 });
-
                 const addressContainer = document.getElementById('address-list-container');
                 addressContainer.innerHTML = '';
                 userData.addresses.forEach(addr => {
@@ -173,7 +141,16 @@
                 });
             }
 
-            // --- LÓGICA DE TABS ---
+            // Lógica para Cerrar Sesión
+            const logoutBtn = document.getElementById('logoutBtn');
+            if(logoutBtn) {
+                logoutBtn.addEventListener('click', () => {
+                    localStorage.removeItem('greenhaulUser');
+                    window.location.href = 'index.html';
+                });
+            }
+
+            // Lógica de Tabs
             const navLinks = document.querySelectorAll('.account-nav-link');
             const sections = document.querySelectorAll('.account-section');
             navLinks.forEach(link => {
@@ -186,19 +163,7 @@
                 });
             });
 
-            // --- LÓGICA DEL FORMULARIO DE PERFIL ---
-            document.getElementById('profileForm').addEventListener('submit', (e) => {
-                e.preventDefault();
-                alert('Funcionalidad para guardar cambios aún no implementada.');
-            });
-
-            // --- LÓGICA PARA CERRAR SESIÓN ---
-            document.getElementById('logoutBtn').addEventListener('click', () => {
-                localStorage.removeItem('greenhaulUser');
-                window.location.href = 'index.html';
-            });
-
-            // --- INICIALIZACIÓN ---
+            // Llamada inicial para poblar la UI
             populateUI();
         });
     </script>
